force-app/main/default/objects/Mass_Edit_Settings__c/Mass_Edit_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Mass Edit Settings</label>
</CustomObject>