force-app/main/default/objects/Mass_Edit_Settings__c/fields/Field_Set_read_only__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_read_only__c</fullName>
    <label>Field Set (read-only)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>