force-app/main/default/objects/Mass_Edit_Settings__c/fields/Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Search_Field__c</fullName>
    <description>If Object does not support SOSL search, this field will be manually searched.</description>
    <label>Search Field</label>
    <length>32</length>
    <type>Text</type>
</CustomField>